Fixes logo width on home hero + spacing

--- a/resources/assets/sass/layout/_hero.layout.scss
+++ b/resources/assets/sass/layout/_hero.layout.scss
@@ -24,8 +24,8 @@
         }
 
         .animated-face-svg {
-            width: 150px;
-            height: 150px;
+            width: 190px;
+            height: 190px;
         }
     }
 
@@ -38,8 +38,8 @@
         }
 
         .animated-face-svg {
-            width: 160px;
-            height: 160px;
+            width: 210px;
+            height: 210px;
         }
     }
 
@@ -52,8 +52,8 @@
         }
 
         .animated-face-svg {
-            width: 200px;
-            height: 200px;
+            width: 255px;
+            height: 255px;
         }
     }
 }
